[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncertainty-playground"
version = "0.1.0"
description = "Tiny Streamlit app to run simulate() from hb_model, wbkc, dfs_model and visualize uncertainty."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kishor Bhat" }]
dependencies = [
    "streamlit>=1.36",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
where = ["src"]